[package]
name = "alloc"
version = "1.0.0"
authors = ["Ben Harris <mail@bharr.is>", "Matt Ickstadt <matt@icky.pw>", "Matt Coffin <mcoffin13@gmail.com>"]
build = "./build.rs"

[lib]
name = "alloc"
path = "rust/src/liballoc/lib.rs"

[dependencies.core]
git = "https://github.com/hackndev/rust-libcore"
